# bifrost

./: .stack.yaml.swp  Draw2.hs  LICENSE.md  Makefile  ObjLoader.hs  ObjTest.hs  ObjUtil.hs  README.md  bifrost.cabal  bifrost.sh  build.hs  build.sh  commit.hs  more  readme.txt  run.hs  stack.yaml
.stack-work/install/x86_64-linux/lts-3.11/7.10.2/flag-cache/: bifrost-0.1.0.0
.stack-work/install/x86_64-linux/lts-3.11/7.10.2/pkgdb/: package.cache
app/: Main.hs
json/: cube.json  metal.json  monkey.json
shaders/: tex.f.glsl  tex.v.glsl
src/: Control.hs  Draw2.hs  Entity.hs  JsonLoader.hs  Main.hs  roll.hs
