name:                bifrost
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/joelelmercarlson/bifrost#readme
license:             BSD3
license-file:        LICENSE
author:              Joel E Carlson
maintainer:          joel.elmer.carlson@gmail.com
copyright:           2015 Joel E Carlson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Entity
  build-depends:       base >= 4.7 && < 5
                     , linear
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     Control
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , GLFW-b
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     Draw2
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , GLFW-b
                     , OpenGL
                     , GLUtil
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     JsonLoader
  build-depends:       base >= 4.7 && < 5
                     , aeson
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     ObjLoader
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     ObjUtil
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , OpenGL
  default-language:    Haskell2010

executable bifrost-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bifrost
  default-language:    Haskell2010

test-suite test-bifrost
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bifrost
  main-is:             Spec.hs
  build-depends:       base
                     , bifrost
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joelelmerlcarlson/bifrost
