name:                bifrost
version:             0.1.1.0
synopsis:            Modern OpenGL in Haskell
description:         Please see README.md
homepage:            http://github.com/joelelmercarlson/bifrost#README.md
license:             MIT
license-file:        LICENSE.md
author:              Joel E Carlson
maintainer:          joel.elmer.carlson@gmail.com
copyright:           (c) 2017 Joel E Carlson
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Entity
  build-depends:       base
                     , linear
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     Control
  build-depends:       base
                     , lens
                     , linear
                     , GLFW-b
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     Draw2
  build-depends:       base
                     , containers
                     , linear
                     , GLFW-b
                     , OpenGL
                     , GLUtil
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     JsonLoader
  build-depends:       base
                     , aeson
                     , bytestring
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     ObjLoader
  build-depends:       base
                     , parsec
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     ObjUtil
  build-depends:       base
                     , linear
                     , split
                     , parsec
                     , containers
                     , OpenGL
  default-language:    Haskell2010

executable bifrost
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Control
                     , Draw2
                     , Entity
                     , JsonLoader
                     , ObjLoader
                     , ObjUtil
  build-depends:       base
                     , aeson
                     , bifrost
                     , bytestring
                     , linear
                     , lens
                     , split
                     , parsec
                     , containers
                     , OpenGL
                     , GLFW-b
                     , GLUtil
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joelelmercarlson/bifrost.git
